# ZedProfiler

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  Feature_Naming_Convention.html  LICENSE  README.md  ROADMAP.md  api.html  genindex.html  index.html  justfile  objects.inv  py-modindex.html  pyproject.toml  python-api.html  readme.html  scalability.html  search.html  searchindex.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  docs-preview.yml  publish-docs.yml  publish-pypi.yml  run-tests.yml
_modules/: index.html
_modules/zedprofiler/: contracts.html  exceptions.html
_modules/zedprofiler/IO/: feature_writing_utils.html  loading_classes.html
_modules/zedprofiler/featurization/: colocalization.html  granularity.html  intensity.html  neighbors.html  texture.html  volumesizeshape.html
_modules/zedprofiler/image_utils/: image_utils.html
_sources/: Feature_Naming_Convention.md.txt  python-api.md.txt
_sources/features/: Feature_Naming_Convention.md.txt
_sources/notebooks/: walkthrough.ipynb.txt
_static/: custom.css
_static/source/: package.json
docs/: RFC-2119-Feature-Naming-Convention.md  requirements.txt
docs/jupyter_execute/notebooks/: walkthrough.ipynb
docs/scripts/: run_autobuild.py
docs/source/: api.rst  conf.py  index.rst
docs/src/: Feature_Naming_Convention.md  RFC-2119-Feature-Naming-Convention.md  api.rst  conf.py  index.md  python-api.md  readme.md  scalability.md
docs/src/features/: areasizeshape.md  colocalization.md  granularity.md  intensity.md  neighbors.md  texture.md
docs/src/notebooks/: walkthrough.ipynb
docs/src/notebooks/test_data/dummy_image_set/: channel1.tif  channel2.tif
docs/src/notebooks/test_data/dummy_label_set/: nuclei_labels.tif
docs/src/test_data/dummy_image_set/: channel1.tif  channel2.tif
docs/src/test_data/dummy_label_set/: nuclei_labels.tif
features/: Feature_Naming_Convention.html  areasizeshape.html  colocalization.html  granularity.html  intensity.html  neighbors.html  texture.html
logo/source/: README.md
logo/source/src/: App.tsx
notebooks/: walkthrough.html
scripts/: test_update_coverage_badge.py  update_coverage_badge.py
src/ZedProfiler/: cli.py
src/notebooks/: example_notebook.ipynb  example_notebook.py
src/zedprofiler/: __init__.py  _version.py  contracts.py  exceptions.py
src/zedprofiler/IO/: __init__.py  feature_writing_utils.py  loading_classes.py
src/zedprofiler/featurization/: __init__.py  areasizeshape.py  colocalization.py  granularity.py  intensity.py  neighbors.py  texture.py  volumesizeshape.py
src/zedprofiler/image_utils/: image_utils.py
tests/: conftest.py  test_cli.py  test_contracts.py  test_data_profiles.py  test_featurization_scaffolds.py  test_image_utils.py  test_integrations.py  test_main.py  test_package.py  test_package_exports.py  test_profile_fixtures.py  test_robustness.py  test_update_coverage_badge.py
tests/IO/: feature_writing_utils_test.py  test_loading_classes.py
tests/featurization/: conftest.py  test_areasizeshape.py  test_colocalization.py  test_featurization_modules.py  test_granularity.py  test_intensity.py  test_neighbors.py  test_neighbors_additional.py  test_texture.py  test_volumesizeshape.py
zedprofiler/: __init__.py  contracts.py
