[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "zedprofiler"
dynamic = ["version"]
description = "CPU-first handcrafted 3D featurization toolkit for high-throughput profiling"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Way Lab" },
]
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
]
keywords = ["3d", "image-analysis", "profiling", "featurization", "cell-profiler"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Image Processing",
]

[project.optional-dependencies]
featurization = [
  "mahotas>=1.4.16",
  "scipy>=1.11",
  "scikit-image>=0.22",
  "tqdm>=4.66",
]
dev = [
  "build>=1.2.1",
  "coverage[toml]>=7.6",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.8.0",
  "black>=26.3.1",
  "prek>=0.3.8",
]
docs = [
  "sphinx>=8.0",
  "furo>=2024.8.6",
]

[project.urls]
Homepage = "https://github.com/WayScience/ZedProfiler"
Repository = "https://github.com/WayScience/ZedProfiler"
Issues = "https://github.com/WayScience/ZedProfiler/issues"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=zedprofiler --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["zedprofiler"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["zedprofiler"]

[tool.hatch.version]
path = "zedprofiler/_version.py"

