[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=82.0.1", "setuptools-scm>=10.0.5" ]

[project]
name = "zedprofiler"
version = "0.0.1"
description = "CPU-first handcrafted 3D featurization toolkit for high-throughput profiling"
readme = "README.md"
authors = [
  { name = "Your NameWay Lab" },
]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fire>=0.7.1",
  "jinja2>=3.1.6",
  "numpy>=2.2.6",
  "pandas>=3.0.2",
  "scikit-image>=0.26",
  "scipy>=1.17.1",
  "tqdm>=4.67.3",
]
scripts.ZedProfiler = "ZedProfiler.cli:trigger"

[dependency-groups]
dev = [
  "poethepoet>=0.44",
  "pytest>=9.0.3",
  "pytest-cov>=5",
  "ruff>=0.15.10",
]
docs = [
  "myst-nb>=1.4",
  "pydata-sphinx-theme>=0.17",
  "sphinx>=9.1",
]
notebooks = [
  "black>=26.3.1",
  "isort>=8.0.1",
  "jupyterlab>=4.5.6",
  "jupyterlab-code-formatter>=3.0.3",
  "jupytext>=1.19.1",
]

[tool.setuptools_scm]
root = "."
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
version_file = "src/ZedProfiler/_version.py"

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
lint.select = [
  # flake8-builtins
  "A",
  # flake8-annotations
  "ANN",
  # flake8-comprehensions
  "C4",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # pylint
  "PL",
  # ruff
  "RUF",
  # flake8-simplify
  "SIM",
  "W",
]
# Ignore `F401` (unused imports) for `__init__.py` file
lint.per-file-ignores."__init__.py" = [ "F401" ]

[tool.pytest]
ini_options.pythonpath = [ "." ]

[tool.jupytext]
formats = "ipynb,py:light"

[tool.vulture]
min_confidence = 90
paths = [ "src/zedprofiler", "tests" ]

[tool.poe]
# tasks for development environments
tasks.test.shell = """
pytest
"""
tasks.jupyter.shell = """
jupyter lab
"""
